--- a/assets/scss/default.scss
+++ b/assets/scss/default.scss
@@ -744,7 +744,7 @@ html, body {
 
 /* MODALS */
 .entity-window {
-	z-index: 1040;
+	z-index: 1010;
 	width: 300px;
 	display: none;
 	margin-bottom: 50px;
